# claude-code-copy-paste-reformatter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_code_copy_paste_reformatter/: __main__.py  about.py  clipboard.py  reformat.py  tray.py  watcher.py
clipboard_reformatter/: __main__.py  reformat.py  tray.py  watcher.py
docs/superpowers/plans/: 2026-04-30-clipboard-reformatter.md
docs/superpowers/specs/: 2026-04-30-clipboard-reformatter-design.md
tests/: test_clipboard.py  test_reformat.py  test_watcher.py
