[project]
name = "clipboard-reformatter"
version = "0.1.0"
description = "Systray app that strips trailing spaces from clipboard text"
requires-python = ">=3.11"
dependencies = [
    "pyperclip>=1.8",
    "pystray>=0.19",
    "Pillow>=10",
]

[project.scripts]
clipboard-reformatter = "clipboard_reformatter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipboard_reformatter"]
