[project]
name = "clipboard-reformatter"
version = "0.1.0"
description = "Systray app that strips trailing spaces from clipboard text"
requires-python = ">=3.11"
dependencies = [
    "pyperclip>=1.8",
    "pystray>=0.19",
    "Pillow>=10",
]

[project.scripts]
clipboard-reformatter = "clipboard_reformatter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipboard_reformatter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "C4",       # flake8-comprehensions
    "RUF",      # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
