[project]
name = "claude-code-copy-paste-reformatter"
version = "0.1.0"
description = "Systray app that strips trailing spaces from clipboard text"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.8",
    "pystray>=0.19",
    "Pillow>=10",
]

[project.scripts]
claude-code-copy-paste-reformatter = "claude_code_copy_paste_reformatter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_copy_paste_reformatter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "C4",       # flake8-comprehensions
    "RUF",      # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
